# console

./: CHANGELOG.md  CMakeLists.txt  README.md
examples/: main.cpp  ostringstream.cpp  stdout-console.cpp
include/console/: argument.h  command_definition.h  console.h  console_environment.h  definitions.h  exception.h  lib.h  parameter.h  result.h
lib/: CMakeLists.txt
lib/console/: CMakeLists.txt  argument.cpp  command_definition.cpp  console.cpp  console_environment.cpp  definitions.cpp  parameter.cpp
